# ruetobas

./: .gitignore  karty_normalne.txt  komendy.txd  komendy.txt
Cards/: Thumbs.db
RuetobasServ/: CMakeLists.txt  Main.cpp  Parser.cpp  Parser.h  ServerTCP.cpp  ServerTCP.h
Server/: Board.cpp  Board.h  CMakeLists.txt  Cards.cpp  Cards.h  Logic.cpp  Logic.h  Main.cpp  Parser.cpp  Parser.h  Player.cpp  Player.h  ServerTCP.cpp  ServerTCP.h  StringProcessing.cpp  StringProcessing.h  TCP.cpp  TCP.h  Tunnel.cpp  Tunnel.h
WindowsGame1/: Ruetobas.sln  WindowsGame1.sln
WindowsGame1/WindowsGame1/WindowsGame1/: Animation.cs  Button.cs  Card.cs  Game1.cs  Geo.cs  Lmao.txt  Logic.cs  Player.cs  Program.cs  Render.cs  Ruetobas.csproj  Ruetobas.csproj.Debug.cachefile  Settings.cs  UI.cs  WindowsGame1.csproj
WindowsGame1/WindowsGame1/WindowsGame1/Properties/: AssemblyInfo.cs
WindowsGame1/WindowsGame1/WindowsGame1Content/: RuetobasContent.contentproj  Thumbs.db  guifont.spritefont
WindowsGame1/WindowsGame1/WindowsGame1Content/cards/: Thumbs.db
WindowsGame1/WindowsGame1/WindowsGame1Content/shaders/: Mask.fx
